--- a/journals/07-logistic_regression/07-logistic_regression.Rmd
+++ b/journals/07-logistic_regression/07-logistic_regression.Rmd
@@ -72,6 +72,8 @@ if(!file.exists("./data/logistic_mains.rds")) {
   logistic_mains <- readRDS("./data/logistic_mains.rds")
   
 }
+
+summary(logistic_mains)
 ```
 
 The output from the model is shown below. The features of ccf and matches stand out as the most important features in the model.
@@ -119,69 +121,32 @@ The output from the model is shown below.
 summary(logistic_inters2)
 ```
 
-### All Three Way Interactions
-
-The code below fits a logistic regression model to the training data using the `train` function from the caret package. The nine features used to fit `rtrees` are included as main effects and with all two and three way interactions. The features are standardized prior to fitting the model using the `preProcess = "scale"` in `train`.
-
-```{r}
-# Fit or load the logistic regression model with all two and three way interactions
-if(!file.exists("./data/logistic_inters3.rds")) {
-  
-  # Set a seed
-  set.seed(20190226)
-  
-  # Fit the model
-  logistic_inters3 <- caret::train(as.factor(samesource) ~
-                                       (ccf + rough_cor + D + sd_D + matches + 
-                                          mismatches + cms + non_cms + sum_peaks)^3,
-                                     preProcess = "scale",
-                                     data = hamby173and252_train,
-                                     method = "glm", 
-                                     family = "binomial")
-  
-  # Save the model
-  saveRDS(logistic_inters3, "./data/logistic_inters3.rds")
-
-} else{
-  
-  # Load the model
-  logistic_inters3 <- readRDS("./data/logistic_inters3.rds")
-  
-}
-```
-
-The output from this model is now shown.
-
 ### Comparing the Logistic Models
 
-The results as computed by caret on the training data are shown below for the three logistic regression models. The accuracy shows that the models with two way interactions performs the best on the training data.
+The results as computed by caret on the training data are shown below for the two logistic regression models. The accuracy shows that the models with two way interactions performs better on the training data.
 
 ```{r}
 # Results from the models
-data.frame(model = c("mains", "inters2", "inters3")) %>%
-  bind_cols(bind_rows(logistic_mains$results, logistic_inters2$results, logistic_inters3$results))
+data.frame(model = c("mains", "inters2")) %>%
+  bind_cols(bind_rows(logistic_mains$results, logistic_inters2$results))
 ```
 
-The AICs from the models are shown below. The model with three way interactions performs the best based on AIC.
+The AICs from the models are shown below. The model with two way interactions performs the best based on AIC.
 
 ```{r}
 AIC(logistic_mains$finalModel)
 AIC(logistic_inters2$finalModel)
-AIC(logistic_inters3$finalModel)
 ```
 
-
-I also want to know how the models perform on the test data. The models are used to make predictions on the test data and the MSEs are computed for each model. These are shown in the table below. The model with main effects only has the smallest MSE. I am guessing that the other models are overfitting.
+I also wanted to know how the models perform on the test data. The models are used to make predictions on the test data and the MSEs are computed for each model. These are shown in the table below. The model with main effects only has the smallest MSE. I am guessing that the other model is overfitting the data.
 
 ```{r}
 data.frame(mains = predict(logistic_mains, hamby224_test %>% select(rf_features)),
-           inters2 = predict(logistic_inters2, hamby224_test %>% select(rf_features)),
-           inters3 = predict(logistic_inters3, hamby224_test %>% select(rf_features))) %>%
-  summarise_at(vars(mains, inters2, inters3), 
+           inters2 = predict(logistic_inters2, hamby224_test %>% select(rf_features))) %>%
+  summarise_at(vars(mains, inters2), 
                function(pred, obs) sum((as.logical(pred) - obs)^2) / n(),
                obs = hamby224_test %>% select(samesource) %>% na.omit())
 ```
-
 
 # Applying LIME to the Models
 
@@ -224,84 +189,7 @@ if(!file.exists("./data/lime_explain_mains.rds")) {
 
 ```{r}
 plot_features(lime_explain_mains$explain[1:12,])
-```
-
-### All Two Way Interactions
-
-```{r}
-# Create or load the lime and explain objects for the two way interaction logisitic regression model
-if(!file.exists("./data/lime_explain_inters2.rds")) {
-  
-  # Set a seed
-  set.seed(20190226)
-  
-  # Apply lime
-  lime_inters2 <- lime(x = hamby173and252_train %>% select(rf_features), 
-                       model = logistic_inters2)
-  
-  # Apply explain
-  explain_inters2 <- explain(x = hamby224_test %>%
-                               select(rf_features) %>% 
-                               na.omit(), 
-                             explainer = lime_inters2, 
-                             n_labels = 1,
-                             n_features = 3)
-  
-  # Join the lime and explain objects in a list
-  lime_explain_inters2 <- list(lime = lime_inters2, explain = explain_inters2)
-  
-  # Save the lime and explain objects
-  saveRDS(lime_explain_inters2, "./data/lime_explain_inters2.rds")
-
-} else {
-  
-  # Load the lime and explain objects
-  lime_explain_inters2 <- readRDS("./data/lime_explain_inters2.rds")
-  
-}
-```
-
-```{r}
-plot_features(lime_explain_inters2$explain[1:12,])
-```
-
-### All Three Way Interactions
-
-```{r}
-# Create or load the lime and explain objects for the three way interaction logisitic regression model
-if(!file.exists("./data/lime_explain_inters3.rds")) {
-  
-  # Set a seed
-  set.seed(20190226)
-  
-  # Apply lime
-  lime_inters3 <- lime(x = hamby173and252_train %>% select(rf_features), 
-                       model = logistic_inters3)
-  
-  # Apply explain
-  explain_inters3 <- explain(x = hamby224_test %>%
-                               select(rf_features) %>% 
-                               na.omit(), 
-                             explainer = lime_inters3, 
-                             n_labels = 1,
-                             n_features = 3)
-  
-  # Join the lime and explain objects in a list
-  lime_explain_inters3 <- list(lime = lime_inters3, explain = explain_inters3)
-  
-  # Save the lime and explain objects
-  saveRDS(lime_explain_inters3, "./data/lime_explain_inters3.rds")
-
-} else {
-  
-  # Load the lime and explain objects
-  lime_explain_inters3 <- readRDS("./data/lime_explain_inters3.rds")
-  
-}
-```
-
-```{r}
-plot_features(lime_explain_inters3$explain[1:12,])
+hamby224_test %>% filter(case == 1)
 ```
 
 # Session Info
